# service-image-generation

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  run_local.sh  run_local_with_ui.sh  startup.py  test_local_deployment.sh
_queries/: cloudinary_migration.sql  neon_tables.sql  update_video_support.sql
configs/: __init__.py  client_init.py  client_openai.py  utils.py  veo_client.py
database/: __init__.py
services/: __init__.py  audio_processor.py  cloudinary_service.py  video_prompt.py
services/db/: __init__.py  datadog.py  neon.py
